123/MyProject/src/objects/time__c.object
<CustomObject>
    <fields>
        <fullName>PHnumber__c</fullName>
        <label>PHnumber</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phone_NO__c</fullName>
        <label>Phone NO</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Qualification__c</fullName>
        <label>Qualification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIME__c</fullName>
        <label>TIME</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>name__c</fullName>
        <label>name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>number__c</fullName>
        <label>number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>time</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>T-{00000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>times</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>